--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
       content="Fortuna is a revolutionary platform that offers a decentralized red envelope gifting system for secure and randomized distribution of gift funds containing cryptocurrencies. With easy claiming and complete transaction history, Fortuna is the perfect solution for modern gift-giving. Join us today and redefine the way you gift!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
